--- a/LoginWeb/wwwroot/index.html
+++ b/LoginWeb/wwwroot/index.html
@@ -27,6 +27,16 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
+    <script>
+        // Expor para o Blazor
+        window.getFingerprint = async () => {
+            const fp = await FingerprintJS.load();
+            const result = await fp.get();
+            return result.visitorId;
+        };
+    </script>
+
 </body>
 
 </html>
